--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
 </TITLE>
 <body>
 <h1>Tom's Page</h1>
-<h2>Oh, so much to come!</h2>
+<h2>This is the part where I add the images.</h2>
 </body>
 </html>
+
+<style>
+body {
+	width: 600px;
+	margin: auto;
+}
+img {
+	width: 100%;
+	height: auto;
+	margin-bottom: 16px;
+}
+</style>
+
+<img src="images/hypnorat.jpg">
+<img src="images/wrong!.jpg">
+<img src="images/long egg 3.jpg">
+<img src="images/wrong.jpg">
+<img src="images/liftoff 2.6.19.jpg">
