--- a/index.html
+++ b/index.html
@@ -22,7 +22,41 @@ img {
 }
 </style>
 
-<img src="images/hypnorat.jpg">
+<img src="images/
+<img src="images/ride%20the%20wave.jpg" title="February 22, 2018">
+<img src="images/this%20is%20a%20true%20story.jpg" title="February 22, 2018">
+<img src="images/forge%20&%20foundry.jpg" title="February 22, 2018">
+<img src="images/lincoln.jpg" title="February 21, 2018">
+<img src="images/dry.jpg" title="February 21, 2018">
+<img src="images/alas.jpg" title="February 20, 2018">
+<img src="images/evil.jpg" title="February 19, 2018">
+<img src="images/hey%21.jpg" title="February 18, 2018">
+<img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%20.jpg" title="February 18, 2018">
+<img src="images/peter%20painting.jpg" title="February 18, 2018">
+<img src="images/ride.jpg" title="February 17, 2018">
+<img src="images/hot%20tip%202.jpg" title="February 16, 2018">
+<img src="images/2%2E15%2E19%201.jpg" title="February 15, 2018">
+<img src="images/2%2E15%2E19.jpg" title="February 15, 2018">
+<img src="images/hot%20tip.jpg" title="February 15, 2018">
+<img src="images/the%20address.jpg" title="February 13, 2018">
+<img src="images/in%20considering%20our%20circumstances.jpg" title="February 12, 2018">
+<img src="images/what%20are%20we%20supposed.jpg" title="February 12, 2018">
+<img src="images/2%2E11%2E19.jpg" title="February 11, 2018">
+<img src="images/but%20what%20about%20you.jpg" title="February 11, 2018">
+<img src="images/earth.jpg" title="February 10, 2018">
+<img src="images/o%21.jpg" title="February 10, 2018">
+<img src="images/at%20sea.jpg" title="February 10, 2018">
+<img src="images/sail%20on.jpg" title="February 10, 2018">
+<img src="images/stained%20glass.jpg" title="February 9, 2018">
+<img src="images/off%20to%20the%20races.jpg" title="February 8, 2018">
+<img src="images/note%20to%20self%202%2E8%2E19.jpg" title="February 8, 2018">
+<img src="images/liftoff%202%2E6%2E19%2Ejpg" title="February 6, 2018">
+<img src="images/portrait%20of%20the%20artist.jpg" title="February 6, 2018">
+<img src="images/return%20or%20renew.jpg" title="February 5, 2018">
+
+
+
+
 <img src="images/long egg 3.jpg">
 <img src="images/wrong.jpg">
 <img src="images/liftoff 2.6.19.jpg">
