--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@ img {
 </style>
 
 <img src="images/ride%20the%20wave.jpg" title="February 22, 2019">
-<img src="images/this%20is%20a%20true%20story.jpg" title="February 22, 2019">
 <img src="images/forge%20&%20foundry.jpg" title="February 22, 2019">
+<img src="images/this%20is%20a%20true%20story.jpg" title="February 22, 2019">
 <img src="images/lincoln.jpg" title="February 21, 2019">
 <img src="images/dry.jpg" title="February 21, 2019">
 <img src="images/alas.jpg" title="February 20, 2019">
 <img src="images/evil.jpg" title="February 19, 2019">
 <img src="images/hey%21.jpg" title="February 18, 2019">
-<img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%20.jpg" title="February 18, 2019">
+<img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%29.jpg" title="February 18, 2019">
 <img src="images/peter%20painting.jpg" title="February 18, 2019">
 <img src="images/ride.jpg" title="February 17, 2019">
 <img src="images/hot%20tip%202.jpg" title="February 16, 2019">
@@ -43,8 +43,8 @@ img {
 <img src="images/2%2E11%2E19.jpg" title="February 11, 2019">
 <img src="images/but%20what%20about%20you.jpg" title="February 11, 2019">
 <img src="images/earth.jpg" title="February 10, 2019">
-<img src="images/o%21.jpg" title="February 10, 2019">
 <img src="images/at%20sea.jpg" title="February 10, 2019">
+<img src="images/o%21.jpg" title="February 10, 2019">
 <img src="images/sail%20on.jpg" title="February 10, 2019">
 <img src="images/stained%20glass.jpg" title="February 9, 2019">
 <img src="images/off%20to%20the%20races.jpg" title="February 8, 2019">
@@ -76,8 +76,26 @@ img {
 <img src="images/the unanimous declaration.jpg" title="January 15, 2019">
 <img src="images/in congress.jpg" title="January 15, 2019">
 <img src="images/shine.jpg" title="January 15, 2019">
+<img src="images/x__write_songs_%21.jpg" title="January 14, 2019">
+<img src="images/loading the frepis.png" title="January 14, 2019">
+<img src="images/points west.jpg" title="January 14, 2019">
+<img src="images/time.jpg" title="January 10, 2019">
+<img src="images/revelation.jpg" title="January 10, 2019">
+<img src="images/pattern.jpg" title="January 9, 2019">
+<img src="images/blackstars.jpg" title="January 8, 2019">
+<img src="images/checker.jpg" title="January 8, 2019">
+<img src="images/reminder.jpg" title="January 7, 2019">
+<img src="images/Tom%27s poster.jpg" title="January 7, 2019">
+<img src="images/well%3F.jpg" title="January 7, 2019">
+<img src="images/eiseley.jpg" title="January 6, 2019">
+<img src="images/goose 2.jpg" title="January 6, 2019">
+<img src="images/goose 1.jpg" title="January 6, 2019">
+<img src="images/note to self.jpg" title="January 5, 2019">
+<img src="images/though you may be wondering.jpg" title="January 5, 2019">
+<img src="images/finch.jpg" title="January 5, 2019">
+<img src="images/warning.jpg" title="January 3, 2019">
+<img src="images/you 2.jpg" title="January 2, 2019">
+<img src="images/mission.png" title="January 2, 2019">
+<img src="images/year of the pig.png" title="January 2, 2019">
+<img src="images/road.jpg" title="January 1, 2019">
 
-
-<img src="images/long egg 3.jpg">
-<img src="images/wrong.jpg">
-<img src="images/liftoff 2.6.19.jpg">
