--- a/index.html
+++ b/index.html
@@ -98,4 +98,9 @@ img {
 <img src="images/mission.png" title="January 2, 2019">
 <img src="images/year of the pig.png" title="January 2, 2019">
 <img src="images/road.jpg" title="January 1, 2019">
-
+<img src="images/fireworks.jpg" title="December 31, 2018"
+<img src="images/squirm.jpg" title="December 31, 2018"
+<img src="images/waiting.jpg" title="December 27, 2018"
+<img src="images/network.jpg" title="December 26, 2018"
+<img src="images/wrong.jpg" title="December 23, 2018"
+<img src="images/tempest.jpg" title="December 19, 2018"
