--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </TITLE>
 <body>
 <h1>Tom's Page</h1>
-<h2>This is the part where I add the images.</h2>
+<p>This is the part where I add the images.</p>
 </body>
 </html>
 </br>
@@ -98,9 +98,30 @@ img {
 <img src="images/mission.png" title="January 2, 2019">
 <img src="images/year of the pig.png" title="January 2, 2019">
 <img src="images/road.jpg" title="January 1, 2019">
-<img src="images/fireworks.jpg" title="December 31, 2018"
-<img src="images/squirm.jpg" title="December 31, 2018"
-<img src="images/waiting.jpg" title="December 27, 2018"
-<img src="images/network.jpg" title="December 26, 2018"
-<img src="images/wrong.jpg" title="December 23, 2018"
-<img src="images/tempest.jpg" title="December 19, 2018"
+<img src="images/fireworks.jpg" title="December 31, 2018">
+<img src="images/squirm.jpg" title="December 31, 2018">
+<img src="images/waiting.jpg" title="December 27, 2018">
+<img src="images/network.jpg" title="December 26, 2018">
+<img src="images/wrong.jpg" title="December 23, 2018">
+<img src="images/tempest.jpg" title="December 19, 2018">
+<img src="images/lavendar.jpg" title="December 19, 2018">
+<img src="images/star people.jpg" title="December 18, 2018">
+<img src="images/long egg 3.jpg" title="December 10, 2018">
+<img src="images/belfry.jpg" title="December 8, 2018">
+<img src="images/bongle crongus.png" title="December 3, 2018">
+<img src="images/avant-garde.png" title="December 3, 2018">
+<img src="images/b.jpg" title="November 24, 2018">
+<img src="images/wow%21.jpg" title="November 24, 2018">
+<img src="images/kermit.jpg" title="November 24, 2018">
+<img src="images/colossus.jpg" title="November 22, 2018">
+<img src="images/golden gate.jpg" title="November 22, 2018">
+<img src="images/let%27s make something.jpg" title="November 21, 2018">
+<img src="images/run II.jpg" title="November 16, 2018">
+<img src="images/yes.jpg" title="November 16, 2018">
+<img src="images/crabs.jpg" title="November 15, 2018">
+<img src="images/1984.jpg" title="November 13, 2018">
+<img src="images/A.I..jpg" title="November 13, 2018">
+<img src="images/hands.jpg" title="November 24, 2018">
+<img src="images/hynorat.jpg" title="November 9, 2018">
+<img src="images/shop.jpg" title="November 4, 2018">
+<img src="images/jack truck.jpg" title="October 30, 2018">
