--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ img {
 <img src="images/yes.jpg" title="November 16, 2018">
 <img src="images/crabs.jpg" title="November 15, 2018">
 <img src="images/1984.jpg" title="November 13, 2018">
-<img src="images/A.I..jpg" title="November 13, 2018">
-<img src="images/hands.jpg" title="November 24, 2018">
-<img src="images/hynorat.jpg" title="November 9, 2018">
+<img src="images/A.I.jpg" title="November 13, 2018">
+<img src="images/hands.jpg" title="November 9, 2018">
+<img src="images/hypnorat.jpg" title="November 9, 2018">
 <img src="images/shop.jpg" title="November 4, 2018">
 <img src="images/jack truck.jpg" title="October 30, 2018">
