--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ img {
 <img src="images/colossus.jpg" title="November 22, 2018">
 <img src="images/golden gate.jpg" title="November 22, 2018">
 <img src="images/let%27s make something.jpg" title="November 21, 2018">
-<img src="images/run II.jpg" title="November 16, 2018">
+<img src="images/run II.png" title="November 16, 2018">
 <img src="images/yes.jpg" title="November 16, 2018">
 <img src="images/crabs.jpg" title="November 15, 2018">
 <img src="images/1984.jpg" title="November 13, 2018">
