--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </TITLE>
 <body>
 <h1>Tom's Page</h1>
-<p>This is the part where I add the images.</p>
+<p>Okay, next we do the email thing.</p>
 </body>
 </html>
 </br>
@@ -125,3 +125,7 @@ img {
 <img src="images/hypnorat.jpg" title="November 9, 2018">
 <img src="images/shop.jpg" title="November 4, 2018">
 <img src="images/jack truck.jpg" title="October 30, 2018">
+
+<body>
+<h1>by Tom</h1>
+</body>
