--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@ img {
 <img src="images/shop.jpg" title="November 4, 2018">
 <img src="images/jack truck.jpg" title="October 30, 2018">
 
-<body>
-<h1>by Tom</h1>
-</body>
+</br>
+</br>
+<h1 style="text-align:right;">by Tom</h1>
