--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     Tom's Page
 </TITLE>
 <body>
-<h1>Tom's Page</h1>
-<p>Okay, next we do the email thing.</p>
+<h1 style="font-family:Papyrus;">Tom's Page</h1>
+<p style="font-family:Comic Sans MS;">Hey oopa oopa doobie doo smash that email button to get some dank memes on the daily.</p>
 </body>
+
+<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
+</form>
 </html>
 </br>
 </br>
