--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     Tom's Page
 </TITLE>
 <body>
-<h1 style="font-family:Papyrus;">Tom's Page</h1>
-<p style="font-family:Comic Sans MS;">Hey oopa oopa doobie doo smash that email button to get some dank memes on the daily.</p>
+<h1 style="font-family:Helvetica;">Tom's Page</h1>
+<p style="font-family:Helvetica;">Hey oopa oopa doobie doo smash that email button to get some dank memes on the daily.</p>
 </body>
 
 <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
@@ -27,6 +27,7 @@ img {
 }
 </style>
 
+<img src="images/keepitup2.gif" title="February 23, 2019">
 <img src="images/ride%20the%20wave.jpg" title="February 22, 2019">
 <img src="images/forge%20&%20foundry.jpg" title="February 22, 2019">
 <img src="images/this%20is%20a%20true%20story.jpg" title="February 22, 2019">
@@ -133,4 +134,4 @@ img {
 
 </br>
 </br>
-<h1 style="text-align:right;">by Tom</h1>
+<h1 style="font-family:Helvetica;text-align:right;">by Tom</h1>
