--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 body {
 	width: 600px;
 	margin: auto;
+	background-color: #e6d9fc;
 }
 img {
 	width: 100%;
 	height: auto;
-	margin-bottom: 16px;
+	margin-bottom: 24px;
+	box-shadow: 0px 2px 5px 0px #696969;
+
 }
 </style>
 
