--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
+</br>
+</br>
 <TITLE>
     Tom's Page
 </TITLE>
 <body>
-<h1 style="font-family:Helvetica;">Tom's Page</h1>
-<p style="font-family:Helvetica;">Hey oopa oopa doobie doo smash that email button to get some dank memes on the daily.</p>
+<h1 style="font-family:Bookman;">Tom's Page</h1>
+</br>
+</br>
+</br>
+<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
+</form>
+<p style="font-family:Bookman;">Submit your email address to join the daily mailing list</p>
 </body>
 
 <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
@@ -15,16 +24,17 @@
 </html>
 </br>
 </br>
+</br>
 <style>
 body {
 	width: 600px;
 	margin: auto;
-	background-color: #f0eaf9;
+	background-color: #ededf7;
 }
 img {
 	width: 100%;
 	height: auto;
-	margin-bottom: 24px;
+	margin-bottom: 35px;
 	box-shadow: 0px 2px 5px 0px #696969;
 
 }
@@ -137,4 +147,4 @@ img {
 
 </br>
 </br>
-<h1 style="font-family:Helvetica;text-align:right;">by Tom</h1>
+<h1 style="font-family:Bookman;text-align:right;">by Tom</h1>
