--- a/index.html
+++ b/index.html
@@ -6,15 +6,9 @@
     Tom's Page
 </TITLE>
 <body>
-<h1 style="font-family:Bookman;">Tom's Page</h1>
-</br>
-</br>
-</br>
-<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
-</form>
-<p style="font-family:Bookman;">Submit your email address to join the daily mailing list</p>
+<h1 style="font-family:Bookman Old Style;">Tom's Page</h1>
+
+<p style="font-family:Bookman Old Style;"><i>Submit your email address to join the daily mailing list</i></p>
 </body>
 
 <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
@@ -147,4 +141,4 @@ img {
 
 </br>
 </br>
-<h1 style="font-family:Bookman;text-align:right;">by Tom</h1>
+<h1 style="font-family:Bookman;text-align:right;"><i>by Tom</i></h1>
