--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     Tom's Page
 </TITLE>
 <body>
-<h1 style="font-family:Bookman Old Style;">Tom's Page</h1>
+<h1 style="font-family:Trebuchet MS;">Tom's Page</h1>
 
-<p style="font-family:Bookman Old Style;"><i>Submit your email address to join the daily mailing list</i></p>
+<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list</i></p>
 </body>
 
 <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
