--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="icon" type="image/png" href="t favicon.png">
+</head>
 </br>
 </br>
 <TITLE>
@@ -23,7 +26,7 @@
 body {
 	width: 600px;
 	margin: auto;
-	background-color: #ededf7;
+	background-color: #f4f7fc;
 }
 img {
 	width: 100%;
