--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" type="image/png" href="t favicon.png">
+<link rel="icon" type="image/png" href="images/t favicon.png">
 </head>
 </br>
 </br>
