--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     Tom's Page
 </TITLE>
 <body>
-<h1 style="font-family:Trebuchet MS;">Tom's Page</h1>
+<img src="tomspage.png">
+h1 style="font-family:Trebuchet MS;">Tom's Page</h1
 
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list</i></p>
 </body>
