--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
 </head>
-</br>
-</br>
 <TITLE>
     Tom's Page
 </TITLE>
 <body>
-<img src="images/tomspage.png">
-<h1 style="font-family:Trebuchet MS;">Tom's Page</h1
+<img src="images/tomspage.png" class="logo">
+
+	// <h1 style="font-family:Trebuchet MS;">Tom's Page</h1> //
 
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list</i></p>
 </body>
@@ -35,6 +34,12 @@ img {
 	margin-bottom: 35px;
 	box-shadow: 0px 2px 5px 0px #696969;
 
+}
+	.logo {
+     	width: 50%;
+	height: auto;
+	margin-bottom: 35px;
+	box-shadow: none;
 }
 </style>
 
