--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <body>
 <img src="images/tomspage.png" class="logo">
 
-	// <h1 style="font-family:Trebuchet MS;">Tom's Page</h1> //
-
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list</i></p>
 </body>
 
@@ -36,6 +34,9 @@ img {
 
 }
 	.logo {
+	display: block;
+ 	margin-left: auto;
+  	margin-right: auto;
      	width: 50%;
 	height: auto;
 	margin-bottom: 35px;
@@ -150,4 +151,4 @@ img {
 
 </br>
 </br>
-<h1 style="font-family:Bookman;text-align:right;"><i>by Tom</i></h1>
+<h1 style="font-family:Trebuchet MS;text-align:right;"><i>by Tom</i></h1>
