--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 	</br>
 <img src="images/tomspage.png" class="logo">
-
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list</i></p>
 </body>
 
@@ -23,6 +22,7 @@
 </br>
 <style>
 body {
+	text-align: center;
 	width: 600px;
 	margin: auto;
 	background-color: #f4f7fc;
