--- a/index.html
+++ b/index.html
@@ -152,4 +152,4 @@ img {
 
 </br>
 </br>
-<h1 style="font-family:Trebuchet MS;text-align:right;"><i>by Tom</i></h1>
+<h1 style="font-family:Georgia;text-align:right;"><i>by Tom</i></h1>
