--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ img {
 }
 </style>
 
+<img src="images/2.24.19.jpg" title="February 24, 2019">
 <img src="images/keepitup2.gif" title="February 23, 2019">
 <img src="images/ride%20the%20wave.jpg" title="February 22, 2019">
 <img src="images/forge%20&%20foundry.jpg" title="February 22, 2019">
