--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	</br>
 <img src="images/tomspage.png" class="logo">
-<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list</i></p>
+<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list:</i></p>
 </body>
 
 <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
