--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ img {
 <img src="images/alas.jpg" title="February 20, 2019">
 <img src="images/evil.jpg" title="February 19, 2019">
 <img src="images/hey%21.jpg" title="February 18, 2019">
-<img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%29.jpg" title="February 18, 2019">
+<a href="https://www.youtube.com/watch?v=WIWbgR4vYiw"><img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%29.jpg" title="February 18, 2019"></a>
 <img src="images/peter%20painting.jpg" title="February 18, 2019">
 <img src="images/ride.jpg" title="February 17, 2019">
 <img src="images/hot%20tip%202.jpg" title="February 16, 2019">
@@ -83,7 +83,7 @@ img {
 <img src="images/crossroads.jpg" title="January 30, 2019">
 <img src="images/in the desert.jpg" title="January 29, 2019">
 <img src="images/so long and thanks for all the fish.jpg" title="January 27, 2019">
-<img src="images/where are we now%3F.jpg" title="January 26, 2019">
+<a href="https://www.youtube.com/watch?v=QWtsV50_-p4"><img src="images/where are we now%3F.jpg" title="January 26, 2019"></a>
 <img src="images/guitarist.jpg" title="January 25, 2019">
 <img src="images/a cucumber.jpg" title="January 25, 2019">
 <img src="images/light 1.25.19.jpg" title="January 25, 2019">
@@ -130,7 +130,7 @@ img {
 <img src="images/wrong.jpg" title="December 23, 2018">
 <img src="images/tempest.jpg" title="December 19, 2018">
 <img src="images/lavendar.jpg" title="December 19, 2018">
-<img src="images/star people.jpg" title="December 18, 2018">
+<a href="https://www.youtube.com/watch?v=ixsKAEalya8"><img src="images/star people.jpg" title="December 18, 2018"></a>
 <img src="images/long egg 3.jpg" title="December 10, 2018">
 <img src="images/belfry.jpg" title="December 8, 2018">
 <img src="images/bongle crongus.png" title="December 3, 2018">
@@ -146,7 +146,6 @@ img {
 <img src="images/crabs.jpg" title="November 15, 2018">
 <img src="images/1984.jpg" title="November 13, 2018">
 <img src="images/A.I.jpg" title="November 13, 2018">
-<img src="images/hands.jpg" title="November 9, 2018">
 <img src="images/hypnorat.jpg" title="November 9, 2018">
 <img src="images/shop.jpg" title="November 4, 2018">
 <img src="images/jack truck.jpg" title="October 30, 2018">
