--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ img {
 <img src="images/revelation.jpg" title="January 10, 2019">
 <img src="images/pattern.jpg" title="January 9, 2019">
 <a href="https://www.youtube.com/watch?v=kszLwBaC4Sw"><img src="images/blackstars.jpg" title="★ January 8, 2019 ★"></a>
-<a href="images/judgment of the birds.jpg"><img src="images/checker.jpg" title="January 8, 2019"></a>
+<a href="https://www.tomspage.org/images/judgment%20of%20the%20birds.jpg"><img src="images/checker.jpg" title="January 8, 2019"></a>
 <img src="images/reminder.jpg" title="January 7, 2019">
 <img src="images/Tom%27s poster.jpg" title="January 7, 2019">
 <img src="images/well%3F.jpg" title="January 7, 2019">
