--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@ img {
 <img src="images/revelation.jpg" title="January 10, 2019">
 <img src="images/pattern.jpg" title="January 9, 2019">
 <a href="https://www.youtube.com/watch?v=kszLwBaC4Sw"><img src="images/blackstars.jpg" title="★ January 8, 2019 ★"></a>
-<a href="https://www.tomspage.org/images/judgment%20of%20the%20birds.jpg"><img src="images/checker.jpg" title="January 8, 2019"></a>
+<img src="images/checker.jpg" title="January 8, 2019">
 <img src="images/reminder.jpg" title="January 7, 2019">
 <img src="images/Tom%27s poster.jpg" title="January 7, 2019">
 <img src="images/well%3F.jpg" title="January 7, 2019">
-<img src="images/eiseley.jpg" title="January 6, 2019">
+<a href="https://www.tomspage.org/images/judgment%20of%20the%20birds.jpg"><img src="images/eiseley.jpg" title="January 6, 2019"></a>
 <img src="images/goose 2.jpg" title="January 6, 2019">
 <img src="images/goose 1.jpg" title="January 6, 2019">
 <img src="images/note to self.jpg" title="January 5, 2019">
