--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ img {
 	box-shadow: none;
 }
 </style>
-
+<img src="images/2.26.19.jpg" title="February 26, 2019">
+<a href="https://www.tomspage.org/images/peter%202.26.19.jpg"><img src="images/at sea 2.26.19.jpg" title="February 26, 2019"></a>
 <img src="images/audrey III.jpg" title="February 25, 2019">
 <img src="images/hot tip 3.jpg" title="February 25, 2019">
 <img src="images/2.24.19.jpg" title="February 24, 2019">
