--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ img {
 	box-shadow: none;
 }
 </style>
+<img src="images/lightbulb.jpg" title="February 28, 2019">
 <img src="images/babyits.gif" title="February 27, 2019">
 <img src="images/2.26.19.jpg" title="February 26, 2019">
 <a href="https://www.tomspage.org/images/peter%202.26.19.jpg"><img src="images/at sea 2.26.19.jpg" title="February 26, 2019"></a>
