--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ img {
 	box-shadow: none;
 }
 </style>
+<img src="images/portrait of the artist 3.1.19.jpg" title="March 1, 2019">
 <img src="images/lightbulb.jpg" title="February 28, 2019">
 <img src="images/babyits.gif" title="February 27, 2019">
 <img src="images/2.26.19.jpg" title="February 26, 2019">
