--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ img {
 <img src="images/lavendar.jpg" title="December 19, 2018">
 <a href="https://www.youtube.com/watch?v=ixsKAEalya8"><img src="images/star people.jpg" title="December 18, 2018"></a>
 <img src="images/long egg 3.jpg" title="December 10, 2018">
-<a href="https://youtu.be/gqxT6KOFRIo?t=99"><img src="images/belfry.jpg" title="December 8, 2018">
+<img src="images/belfry.jpg" title="December 8, 2018">
 <img src="images/bongle crongus.png" title="December 3, 2018">
 <img src="images/avant-garde.png" title="December 3, 2018">
 <img src="images/b.jpg" title="November 24, 2018">
