--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@ img {
 	box-shadow: none;
 }
 </style>
+
+<img src="images/serpent.jpg" title="March 3, 2019">
+<img src="images/our new logo.jpg" title="March 3, 2019">
 <img src="images/the return 3.2.19.jpg" title="March 2, 2019">
 <img src="images/portrait of the artist 3.1.19.jpg" title="March 1, 2019">
 <img src="images/lightbulb.jpg" title="February 28, 2019">
