--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ img {
 	box-shadow: none;
 }
 </style>
-
+<img src="images/3.4.19.jpg" title="March 4, 2019">
+<img src="images/stop.jpg" title="March 4, 2019">
 <img src="images/serpent.jpg" title="March 3, 2019">
 <img src="images/our new logo.jpg" title="March 3, 2019">
 <img src="images/the return 3.2.19.jpg" title="March 2, 2019">
