--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ img {
 	box-shadow: none;
 }
 </style>
+<p style="font-family:Georgia;text-align:center;"><i>——— March 2019 ———</i></p>
 <img src="images/3.4.19.jpg" title="March 4, 2019">
 <img src="images/stop.jpg" title="March 4, 2019">
 <img src="images/serpent.jpg" title="March 3, 2019">
