--- a/index.html
+++ b/index.html
@@ -44,13 +44,18 @@ img {
 	box-shadow: none;
 }
 </style>
-<p style="font-family:Georgia;text-align:center;"><i>——— March 2019 ———</i></p>
+
+<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
+
 <img src="images/3.4.19.jpg" title="March 4, 2019">
 <img src="images/stop.jpg" title="March 4, 2019">
 <img src="images/serpent.jpg" title="March 3, 2019">
 <img src="images/our new logo.jpg" title="March 3, 2019">
 <img src="images/the return 3.2.19.jpg" title="March 2, 2019">
 <img src="images/portrait of the artist 3.1.19.jpg" title="March 1, 2019">
+
+<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    February 2019    ––––</i></p>
+
 <img src="images/lightbulb.jpg" title="February 28, 2019">
 <img src="images/babyits.gif" title="February 27, 2019">
 <img src="images/2.26.19.jpg" title="February 26, 2019">
@@ -89,6 +94,9 @@ img {
 <img src="images/liftoff%202%2E6%2E19%2Ejpg" title="February 6, 2019">
 <img src="images/portrait%20of%20the%20artist.jpg" title="February 6, 2019">
 <img src="images/return%20or%20renew.jpg" title="February 5, 2019">
+
+<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    January 2019    ––––</i></p>
+
 <img src="images/sue me%21.jpg" title="January 31, 2019">
 <img src="images/magical machine.jpg" title="January 31, 2019">
 <img src="images/rising storm.jpg" title="January 30, 2019">
@@ -135,6 +143,9 @@ img {
 <img src="images/mission.png" title="January 2, 2019">
 <img src="images/year of the pig.png" title="January 2, 2019">
 <img src="images/road.jpg" title="January 1, 2019">
+
+<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    December 2018    ––––</i></p>
+
 <img src="images/fireworks.jpg" title="December 31, 2018">
 <img src="images/squirm.jpg" title="December 31, 2018">
 <img src="images/waiting.jpg" title="December 27, 2018">
@@ -147,6 +158,9 @@ img {
 <img src="images/belfry.jpg" title="December 8, 2018">
 <img src="images/bongle crongus.png" title="December 3, 2018">
 <img src="images/avant-garde.png" title="December 3, 2018">
+
+<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    November 2018    ––––</i></p>
+
 <img src="images/b.jpg" title="November 24, 2018">
 <img src="images/wow%21.jpg" title="November 24, 2018">
 <img src="images/kermit.jpg" title="November 24, 2018">
@@ -160,6 +174,9 @@ img {
 <img src="images/A.I.jpg" title="November 13, 2018">
 <img src="images/hypnorat.jpg" title="November 9, 2018">
 <img src="images/shop.jpg" title="November 4, 2018">
+
+<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    October 2018    ––––</i></p>
+
 <img src="images/jack truck.jpg" title="October 30, 2018">
 
 </br>
