--- a/index.html
+++ b/index.html
@@ -181,4 +181,4 @@ img {
 
 </br>
 </br>
-<h1 style="font-family:Georgia;text-align:right;"><i>by Tom</i></h1>
+<h1 style="font-family:garamond;text-align:right;"><i>by Tom</i></h1>
