--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ img {
 }
 </style>
 
-<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
 <img src="images/3.4.19.jpg" title="March 4, 2019">
 <img src="images/stop.jpg" title="March 4, 2019">
@@ -54,7 +54,7 @@ img {
 <img src="images/the return 3.2.19.jpg" title="March 2, 2019">
 <img src="images/portrait of the artist 3.1.19.jpg" title="March 1, 2019">
 
-<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    February 2019    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    February 2019    ––––</i></p>
 
 <img src="images/lightbulb.jpg" title="February 28, 2019">
 <img src="images/babyits.gif" title="February 27, 2019">
@@ -95,7 +95,7 @@ img {
 <img src="images/portrait%20of%20the%20artist.jpg" title="February 6, 2019">
 <img src="images/return%20or%20renew.jpg" title="February 5, 2019">
 
-<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    January 2019    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    January 2019    ––––</i></p>
 
 <img src="images/sue me%21.jpg" title="January 31, 2019">
 <img src="images/magical machine.jpg" title="January 31, 2019">
@@ -144,7 +144,7 @@ img {
 <img src="images/year of the pig.png" title="January 2, 2019">
 <img src="images/road.jpg" title="January 1, 2019">
 
-<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    December 2018    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    December 2018    ––––</i></p>
 
 <img src="images/fireworks.jpg" title="December 31, 2018">
 <img src="images/squirm.jpg" title="December 31, 2018">
@@ -159,7 +159,7 @@ img {
 <img src="images/bongle crongus.png" title="December 3, 2018">
 <img src="images/avant-garde.png" title="December 3, 2018">
 
-<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    November 2018    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2018    ––––</i></p>
 
 <img src="images/b.jpg" title="November 24, 2018">
 <img src="images/wow%21.jpg" title="November 24, 2018">
@@ -175,7 +175,7 @@ img {
 <img src="images/hypnorat.jpg" title="November 9, 2018">
 <img src="images/shop.jpg" title="November 4, 2018">
 
-<p style="font-family:garamond;color:gray;text-align:center;"><i>––––    October 2018    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2018    ––––</i></p>
 
 <img src="images/jack truck.jpg" title="October 30, 2018">
 
