--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
 <img src="images/hot tip 4.jpg" title="March 5, 2019">
-<a href="https://www.tomspage.org/images/tyranosaur.jpg"><img src="images/3.5.19.jpg" title="March 5, 2019"></a>
+<a href="https://www.tomspage.org/images/tyranosaur.png"><img src="images/3.5.19.jpg" title="March 5, 2019"></a>
 <img src="images/3.4.19.jpg" title="March 4, 2019">
 <img src="images/stop.jpg" title="March 4, 2019">
 <img src="images/serpent.jpg" title="March 3, 2019">
