--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<img src="images/dc.jpg" title="March 9, 2019">
 <img src="images/%3F%21.jpg" title="March 8, 2019">
 <img src="images/empire state.jpg" title="March 8, 2019">
 <img src="images/now that%27s what i call.jpg" title="March 7, 2019">
