--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<img src="images/to the gods.jpg" title="March 14, 2019">
+<img src="images/do it for you.jpg" title="March 14, 2019">
 <img src="images/error.jpg" title="March 13, 2019">
 <img src="images/hot tip 5.jpg" title="March 12, 2019">
 <img src="images/3.11.19.jpg" title="March 11, 2019">
