--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=fiLaNEFyCiM"><img src="images/ides.jpg" title="March 15, -44"></a>
 <img src="images/to the gods.jpg" title="March 14, 2019">
 <img src="images/do it for you.jpg" title="March 14, 2019">
 <img src="images/error.jpg" title="March 13, 2019">
