--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/columbus%20christopher.jpg"><img src="images/christopher columbus.jpg" title="March 17, 2019"></a>
 <img src="images/african night light.jpg" title="March 16, 2019">
 <a href="https://www.youtube.com/watch?v=fiLaNEFyCiM"><img src="images/ides.jpg" title="March 15, -44"></a>
 <img src="images/to the gods.jpg" title="March 14, 2019">
