--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<img src="images/search engine.jpg" title="March 19, 2019">
 <a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/IMG_7369.JPG"><img src="images/marginal.jpg" title="March 18, 2019"></a>
 <a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/columbus%20christopher.jpg"><img src="images/christopher columbus.jpg" title="March 17, 2019"></a>
 <img src="images/african night light.jpg" title="March 16, 2019">
