--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<img src="images/how about.jpg" title="March 21, 2019">
+<img src="images/spring cleaning.jpg" title="March 21, 2019">
 <img src="images/vitruvian.jpg" title="March 20, 2019">
 <img src="images/search engine.jpg" title="March 19, 2019">
 <a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/IMG_7369.JPG"><img src="images/marginal.jpg" title="March 18, 2019"></a>
