--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<a href="https://www.youtube.com/watch?v=6gmGJvAc-ws"><img src="images/marble.jpg" title="March 22, 2019"></a>
 <img src="images/how about.jpg" title="March 21, 2019">
 <img src="images/spring cleaning.jpg" title="March 21, 2019">
 <img src="images/vitruvian.jpg" title="March 20, 2019">
