--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/leastways%20for%20me.jpg"><img src="images/is always through.jpg" title="March 24, 2019"></a>
+<img src="images/is through.jpg" title="March 24, 2019">
 <img src="images/wait.jpg" title="March 23, 2019">
 <a href="https://www.youtube.com/watch?v=6gmGJvAc-ws"><img src="images/marble.jpg" title="March 22, 2019"></a>
 <img src="images/how about.jpg" title="March 21, 2019">
