--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<img src="images/grow.jpg" title="March 29, 2019">
+<img src="images/grow 2.jpg" title="March 29, 2019">
 <img src="images/blue screen.jpg" title="March 28, 2019">
 <img src="images/raining city.jpg" title="March 27, 2019">
 <img src="images/where has the color.jpg" title="March 27, 2019">
