--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
+<img src="images/echo.jpg" title="March 31, 2019">
 <img src="images/echo.jpg" title="March 30, 2019">
 <img src="images/grow.jpg" title="March 29, 2019">
 <img src="images/grow 2.jpg" title="March 29, 2019">
