--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@ img {
 }
 </style>
 
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
+
+<a href="https://www.tomspage.org/images/portrait%20of%20the%20artist%204.1.19.jpg"><img src="images/portrait of the artist 4.1.19.jpg" title="April 1, 2019"></a>
+
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
 <img src="images/into the.jpg" title="March 31, 2019">
