--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/jessies%20bear"><img src="images/jessie bear.jpg" title="April 3, 2019"></a>
 <img src="images/defeat.jpg" title="April 3, 2019">
 <img src="images/what if.jpg" title="April 2, 2019">
 <a href="https://www.tomspage.org/images/4.1.19.png"><img src="images/portrait of the artist 4.1.19.jpg" title="April 1, 2019"></a>
