--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
-<a href="https://www.youtube.com/watch?v=pyCkhPTU13w&feature=youtu.be&t=191"><img src="images/wild.jpg" title="April 4, 2019"></a>
-<a href="https://www.tomspage.org/images/jessies%20bear.jpg"><img src="images/jessie bear.jpg" title="April 3, 2019"></a>
+<a href="https://www.youtube.com/watch?v=pyCkhPTU13w&feature=youtu.be&t=191" target="_blank"><img src="images/wild.jpg" title="April 4, 2019"></a>
+<a href="https://www.tomspage.org/images/jessies%20bear.jpg" target="_blank"><img src="images/jessie bear.jpg" title="April 3, 2019"></a>
 <img src="images/defeat.jpg" title="April 3, 2019">
 <img src="images/what if.jpg" title="April 2, 2019">
-<a href="https://www.tomspage.org/images/4.1.19.png"><img src="images/portrait of the artist 4.1.19.jpg" title="April 1, 2019"></a>
+<a href="https://www.tomspage.org/images/4.1.19.png" target="_blank"><img src="images/portrait of the artist 4.1.19.jpg" title="April 1, 2019"></a>
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    March 2019    ––––</i></p>
 
