--- a/index.html
+++ b/index.html
@@ -64,19 +64,19 @@ img {
 <img src="images/where has the color.jpg" title="March 27, 2019">
 <img src="images/scream.jpg" title="March 27, 2019">
 <img src="images/3.26.19.jpg" title="March 26, 2019">
-<a href="https://www.youtube.com/watch?v=qL_9zWmDcjs"><img src="images/five year plan.jpg" title="March 25, 2019"></a>
-<a href="https://www.tomspage.org/images/leastways%20for%20me.jpg"><img src="images/is always through.jpg" title="March 24, 2019"></a>
+<a href="https://www.youtube.com/watch?v=qL_9zWmDcjs" target="_blank"><img src="images/five year plan.jpg" title="March 25, 2019"></a>
+<a href="https://www.tomspage.org/images/leastways%20for%20me.jpg" target="_blank"><img src="images/is always through.jpg" title="March 24, 2019"></a>
 <img src="images/is through.jpg" title="March 24, 2019">
 <img src="images/wait.jpg" title="March 23, 2019">
-<a href="https://www.youtube.com/watch?v=6gmGJvAc-ws"><img src="images/marble.jpg" title="March 22, 2019"></a>
+<a href="https://www.youtube.com/watch?v=6gmGJvAc-ws" target="_blank"><img src="images/marble.jpg" title="March 22, 2019"></a>
 <img src="images/how about.jpg" title="March 21, 2019">
 <img src="images/spring cleaning.jpg" title="March 21, 2019">
 <img src="images/vitruvian.jpg" title="March 20, 2019">
 <img src="images/search engine.jpg" title="March 19, 2019">
-<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/IMG_7369.JPG"><img src="images/marginal.jpg" title="March 18, 2019"></a>
-<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/columbus%20christopher.jpg"><img src="images/christopher columbus.jpg" title="March 17, 2019"></a>
+<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/IMG_7369.JPG" target="_blank"><img src="images/marginal.jpg" title="March 18, 2019"></a>
+<a href="https://raw.githubusercontent.com/tomspage/tomspage.github.io/master/images/columbus%20christopher.jpg" target="_blank"><img src="images/christopher columbus.jpg" title="March 17, 2019"></a>
 <img src="images/african night light.jpg" title="March 16, 2019">
-<a href="https://www.youtube.com/watch?v=fiLaNEFyCiM"><img src="images/ides.jpg" title="March 15, -44"></a>
+<a href="https://www.youtube.com/watch?v=fiLaNEFyCiM" target="_blank"><img src="images/ides.jpg" title="March 15, -44"></a>
 <img src="images/to the gods.jpg" title="March 14, 2019">
 <img src="images/do it for you.jpg" title="March 14, 2019">
 <img src="images/error.jpg" title="March 13, 2019">
@@ -88,9 +88,9 @@ img {
 <img src="images/%3F%21.jpg" title="March 8, 2019">
 <img src="images/empire state.jpg" title="March 8, 2019">
 <img src="images/now that%27s what i call.jpg" title="March 7, 2019">
-<a href="https://www.instagram.com/_tomspage/"><img src="images/into the void.jpg" title="March 6, 2019"></a>
+<a href="https://www.instagram.com/_tomspage/" target="_blank"><img src="images/into the void.jpg" title="March 6, 2019"></a>
 <img src="images/hot tip 4.jpg" title="March 5, 2019">
-<a href="https://www.tomspage.org/images/tyranosaur.png"><img src="images/3.5.19.jpg" title="March 5, 2019"></a>
+<a href="https://www.tomspage.org/images/tyranosaur.png" target="_blank"><img src="images/3.5.19.jpg" title="March 5, 2019"></a>
 <img src="images/3.4.19.jpg" title="March 4, 2019">
 <img src="images/stop.jpg" title="March 4, 2019">
 <img src="images/serpent.jpg" title="March 3, 2019">
@@ -103,7 +103,7 @@ img {
 <img src="images/lightbulb.jpg" title="February 28, 2019">
 <img src="images/babyits.gif" title="February 27, 2019">
 <img src="images/2.26.19.jpg" title="February 26, 2019">
-<a href="https://www.tomspage.org/images/peter%202.26.19.jpg"><img src="images/at sea 2.26.19.jpg" title="February 26, 2019"></a>
+<a href="https://www.tomspage.org/images/peter%202.26.19.jpg" target="_blank"><img src="images/at sea 2.26.19.jpg" title="February 26, 2019"></a>
 <img src="images/audrey III.jpg" title="February 25, 2019">
 <img src="images/hot tip 3.jpg" title="February 25, 2019">
 <img src="images/2.24.19.jpg" title="February 24, 2019">
@@ -116,7 +116,7 @@ img {
 <img src="images/alas.jpg" title="February 20, 2019">
 <img src="images/evil.jpg" title="February 19, 2019">
 <img src="images/hey%21.jpg" title="February 18, 2019">
-<a href="https://www.youtube.com/watch?v=WIWbgR4vYiw"><img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%29.jpg" title="February 18, 2019"></a>
+<a href="https://www.youtube.com/watch?v=WIWbgR4vYiw" target="_blank"><img src="images/blue%20moon%20%28oh%2C%20don%27t%20leave%20me%20on%20my%20own%29.jpg" title="February 18, 2019"></a>
 <img src="images/peter%20painting.jpg" title="February 18, 2019">
 <img src="images/ride.jpg" title="February 17, 2019">
 <img src="images/hot%20tip%202.jpg" title="February 16, 2019">
@@ -147,7 +147,7 @@ img {
 <img src="images/crossroads.jpg" title="January 30, 2019">
 <img src="images/in the desert.jpg" title="January 29, 2019">
 <img src="images/so long and thanks for all the fish.jpg" title="January 27, 2019">
-<a href="https://www.youtube.com/watch?v=QWtsV50_-p4"><img src="images/where are we now%3F.jpg" title="January 26, 2019"></a>
+<a href="https://www.youtube.com/watch?v=QWtsV50_-p4" target="_blank"><img src="images/where are we now%3F.jpg" title="January 26, 2019"></a>
 <img src="images/guitarist.jpg" title="January 25, 2019">
 <img src="images/a cucumber.jpg" title="January 25, 2019">
 <img src="images/light 1.25.19.jpg" title="January 25, 2019">
@@ -171,12 +171,12 @@ img {
 <img src="images/time.jpg" title="January 10, 2019">
 <img src="images/revelation.jpg" title="January 10, 2019">
 <img src="images/pattern.jpg" title="January 9, 2019">
-<a href="https://www.youtube.com/watch?v=kszLwBaC4Sw"><img src="images/blackstars.jpg" title="★ January 8, 2019 ★"></a>
+<a href="https://www.youtube.com/watch?v=kszLwBaC4Sw" target="_blank"><img src="images/blackstars.jpg" title="★ January 8, 2019 ★"></a>
 <img src="images/checker.jpg" title="January 8, 2019">
 <img src="images/reminder.jpg" title="January 7, 2019">
 <img src="images/Tom%27s poster.jpg" title="January 7, 2019">
 <img src="images/well%3F.jpg" title="January 7, 2019">
-<a href="https://www.tomspage.org/images/judgment%20of%20the%20birds.jpg"><img src="images/eiseley.jpg" title="January 6, 2019"></a>
+<a href="https://www.tomspage.org/images/judgment%20of%20the%20birds.jpg" target="_blank"><img src="images/eiseley.jpg" title="January 6, 2019"></a>
 <img src="images/goose 2.jpg" title="January 6, 2019">
 <img src="images/goose 1.jpg" title="January 6, 2019">
 <img src="images/note to self.jpg" title="January 5, 2019">
@@ -197,7 +197,7 @@ img {
 <img src="images/wrong.jpg" title="December 23, 2018">
 <img src="images/tempest.jpg" title="December 19, 2018">
 <img src="images/lavendar.jpg" title="December 19, 2018">
-<a href="https://www.youtube.com/watch?v=ixsKAEalya8"><img src="images/star people.jpg" title="December 18, 2018"></a>
+<a href="https://www.youtube.com/watch?v=ixsKAEalya8" target="_blank"><img src="images/star people.jpg" title="December 18, 2018"></a>
 <img src="images/long egg 3.jpg" title="December 10, 2018">
 <img src="images/belfry.jpg" title="December 8, 2018">
 <img src="images/bongle crongus.png" title="December 3, 2018">
