--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
-<a href="https://www.tomspage.org/images/eating%20pictures" target="_blank"><img src="images/are you.jpg" title="April 5, 2019"></a>
+<a href="https://www.tomspage.org/images/eating%20pictures.jpg" target="_blank"><img src="images/are you.jpg" title="April 5, 2019"></a>
 <a href="https://www.youtube.com/watch?v=pyCkhPTU13w&feature=youtu.be&t=191" target="_blank"><img src="images/wild.jpg" title="April 4, 2019"></a>
 <a href="https://www.tomspage.org/images/jessies%20bear.jpg" target="_blank"><img src="images/jessie bear.jpg" title="April 3, 2019"></a>
 <img src="images/defeat.jpg" title="April 3, 2019">
