--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<a href="https://www.tomspage.org/images/nyliram.png" target="_blank"><img src="images/marilyn.jpg" title="April 8, 2019"></a>
 <a href="https://www.tomspage.org/audio/call.mp3" target="_blank"><img src="images/broadcast.jpg" title="April 7, 2019"></a>
 <a href="https://www.youtube.com/watch?v=ZwMVMbmQBug" target="_blank"><img src="images/hot tip 6.jpg" title="April 6, 2019"></a>
 <a href="https://www.tomspage.org/images/eating%20pictures.jpg" target="_blank"><img src="images/are you.jpg" title="April 5, 2019"></a>
