--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<img src="images/diagnosis.jpg" title="April 14, 2019">
 <a href="https://www.tomspage.org/images/jessie%20window.jpg" target="_blank"><img src="images/view.jpg" title="April 13, 2019"></a>
 <a href="https://www.tomspage.org/images/wlf.jpg" target="_blank"><img src="images/flw.jpg" title="April 12, 2019"></a>
 <a href="https://youtu.be/08sDz9Fqfnc?t=196" target="_blank"><img src="images/hot tip 7.jpg" title="April 11, 2019"></a>
