--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    April 2019    ––––</i></p>
 
+<a href="https://youtu.be/SIxOl1EraXA?t=218" target="_blank"><img src="images/vive.jpg" title="April 16, 2019 | Vive la France"></a>
 <img src="images/entry.jpg" title="nqe0wd%nqr1-ksdamop8no0n">
 <img src="images/diagnosis.jpg" title="April 14, 2019">
 <a href="https://www.tomspage.org/images/jessie%20window.jpg" target="_blank"><img src="images/view.jpg" title="April 13, 2019"></a>
